# Breakout-game-

./: CMakeLists.txt  README.md
.github/workflows/: static-analysis.yml
src/: Background.cpp  Ball.cpp  BreakoutGame.cpp  Brick.cpp  Main.cpp  Paddle.cpp  ResourceManager.cpp
src/headers/: Background.h  Ball.h  BreakoutGame.h  Brick.h  GameConstants.h  Paddle.h  ResourceManager.h
test/: BallTest.cpp  CMakeLists.txt  LoggerTest.cpp  PaddleTest.cpp
